--- a/style-guide.html
+++ b/style-guide.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<link rel="stylesheet" href="resources/css/normalize.css">
+
     <link rel="stylesheet" href="resources/css/style.css"> 
 </head>
 
@@ -22,9 +25,31 @@
     </header>
 
     <main>
-        <h1> marianna's style guide </h1>
 
         <div class="layout-wide">
+
+          <div class="news-component">
+
+<div class="content-box">
+
+  <h2> This is a heading</h2>
+
+  <p> This is some text.</p>
+
+  <p> This is some more text.</p>
+
+  <div class="content-box">
+
+    <img src="resources/images/tasman-wez.JPG">
+
+
+  </div>
+
+
+</div>
+
+          </div>
+
             <h1>Site elements</h1>
 
 <h2>Typography</h2>
@@ -287,24 +312,11 @@
 
 <p>This won't work until we reference a video file.</p>
 
-<video>
-
-  Your browser does not support the video tag. I suggest you upgrade your
-  browser.
-
-</video>
+<video src="resources/video/Lake Ripple (1).mp4" muted autoplay loop></video>
 
 <h3>Video with controls</h3>
 
-<p>These won't work until we reference some video files.</p>
 
-<video>
-
-  Your browser does not support the video tag. I suggest you upgrade your
-  browser.
-
-
-</video>
 
 <h2>Some headings in context</h2>
 
