--- a/style-guide.html
+++ b/style-guide.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mars's style guide</title>
 
-<link rel="stylesheet" href="resources/css/normalize.css">
+
 
     <link rel="stylesheet" href="resources/css/style.css"> 
 </head>
@@ -40,7 +40,7 @@
 
   <div class="content-box">
 
-    <img src="resources/images/tasman-wez.JPG">
+    <img src="resources/images/tasman-wez.JPG" alt= "butcher-shop">
 
 
   </div>
