--- a/style-guide.html
+++ b/style-guide.html
@@ -17,8 +17,9 @@
 
   <div class="layout-wide">
     <img src='resources/images/Tasman-Logo-big@2x.png' alt=" tasman butchers logo">
+
     <div class="header-detail">
-      words
+      Specials 
     </div>
 
   </div>
@@ -37,7 +38,7 @@
 
     <div class="content-box">
 
-      <h2> Tasmasn Butchers</h2>
+      <h2> Tasman Butchers</h2>
 
       <p> The meat specialists.</p>
 
@@ -112,7 +113,7 @@
       <a href="?2017-06-2703%3A30%3A17">an internal link that has not been visited</a>
       (don't click or it will become visited).
     </p>
-    <p>This is a link <a href="https://google.com">to an external website</a>.</p>
+    <p>This is a link <a href="https://tasmanbutchers.com.au/">to an external website</a>.</p>
     <p>Here we have a <a href=".">visited link</a>.</p>
     <p>If we click <a href="#">this thing</a>, we'll jump to the top of the page.</p>
 
