--- a/style-guide.html
+++ b/style-guide.html
@@ -19,7 +19,9 @@
     <img src='resources/images/Tasman-Logo-big@2x.png' alt=" tasman butchers logo">
 
     <div class="header-detail">
-      Specials 
+      Specials
+
+
     </div>
 
   </div>
@@ -30,9 +32,6 @@
   <div class="layout-wide">
 
     <div class="news-component">
-
-
-
 
     </div>
 
@@ -115,7 +114,7 @@
     </p>
     <p>This is a link <a href="https://tasmanbutchers.com.au/">to an external website</a>.</p>
     <p>Here we have a <a href=".">visited link</a>.</p>
-    <p>If we click <a href="#">this thing</a>, we'll jump to the top of the page.</p>
+    <p>If we click <a href="">this thing</a>, we'll jump to the top of the page.</p>
 
     <p>This paragraph contains a link to an <a href="mailto:shemphill@collarts.edu.au">email address</a>.</p>
 
