added a video and another image

--- a/style-guide.html
+++ b/style-guide.html
@@ -279,9 +279,9 @@
 
     <h3>Images</h3>
 
-    <h4>Image with wrong reference</h4>
+    <h4>Tasman Butchers oakleigh store</h4>
 
-    <img src="wrongURL.jpg" alt="at least we have the alt text sorted">
+    <img src="resources/images/DSC_0892.JPG" alt="at least we have the alt text sorted">
 
     <h4>Normal sized image</h4>
 
@@ -318,9 +318,10 @@
 
     <h3>Video (no controls - for background)</h3>
 
-    <p>This won't work until we reference a video file.</p>
+    <p>Here is a video i took while cooking up some gyros.</p>
 
-    <video src="resources/video/Lake Ripple (1).mp4" muted autoplay loop></video>
+    <video src="resources/video/DSC_1103.MOV" alt= "flames buring" buring; muted autoplay loop> 
+    </video>
 
     <h3>Video with controls</h3>
 
