--- a/style-guide.html
+++ b/style-guide.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mars's style guide</title>
+  <title>Tasman Butchers</title>
 
   </header>
 
@@ -20,6 +20,9 @@
 
     <div class="header-detail">
       Specials
+
+
+
 
 
     </div>
@@ -37,11 +40,9 @@
 
     <div class="content-box">
 
-      <h2> Tasman Butchers</h2>
+      <h2> The Meat Specialists</h2>
 
-      <p> The meat specialists.</p>
 
-      <p> get some meat man.</p>
 
       <div class="logo">
 
@@ -58,38 +59,15 @@
 
 
 
-    <h1>Site elements</h1>
+    <h1>This Weeks Specials</h1>
+    <p>
+      Whole Lamb Leg $11.99 per kg
 
-    <h2>Typography</h2>
+    </p>
 
-    <h1>Heading level 1 (h1)</h1>
+    <h1>Recipes </h1>
 
-    <p>This is some content.</p>
-    <h2>Heading level 2 (h2)</h2>
-    <p>This is some content.</p>
-    <h3>Heading level 3 (h3)</h3>
-    <p>This is some content.</p>
-    <h4>Heading level 4 (h4)</h4>
-    <p>This is some content.</p>
-    <h5>Heading level 5 (h5)</h5>
-    <p>This is some content.</p>
-    <h2>Paragraphs</h2>
-    <p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipiscing elit. In
-      id risus quis purus mollis lobortis vel ac tellus. Nam pharetra lorem quis
-      dui commodo dapibus. Curabitur aliquet sapien vitae ligula pretium
-      sollicitudin. Sed sed magna eu risus placerat gravida non sit amet augue.
-      Morbi volutpat lobortis imperdiet. Sed elit purus, commodo a mi in,
-      condimentum sagittis urna. Etiam condimentum pharetra cursus. Aliquam erat
-      volutpat. In vel diam nulla. Praesent faucibus augue quis dui vehicula, a
-      consequat est fringilla. Sed nec nisi fermentum, maximus nunc ac, hendrerit
-      lorem. Proin mollis metus in erat dictum egestas. Proin nec ipsum viverra,
-      scelerisque nisi in, faucibus nulla.</p>
-    <p>Aliquam erat volutpat. Donec sagittis libero ac justo suscipit laoreet.
-      Suspendisse ut sem vel augue vulputate sodales blandit sit amet metus.
-      Quisque porta consectetur efficitur. Duis venenatis nisl in mollis
-      convallis. Pellentesque quis accumsan orci. Nulla porta arcu quis laoreet
-      sagittis. Aliquam erat volutpat. Suspendisse sagittis, turpis vel posuere
-      suscipit, dolor nunc sodales est, quis cursus dui elit vel nisl.</p>
+
 
     <h2>Inline elements</h2>
 
@@ -320,7 +298,7 @@
 
     <p>Here is a video i took while cooking up some gyros.</p>
 
-    <video src="resources/video/DSC_1103.MOV" alt= "flames buring" buring; muted autoplay loop> 
+    <video src="resources/video/DSC_1103.MOV" alt="flames buring" buring; muted autoplay loop>
     </video>
 
     <h3>Video with controls</h3>
