--- a/style-guide.html
+++ b/style-guide.html
@@ -44,6 +44,7 @@
 
 
 
+
       <div class="logo">
 
 
@@ -63,9 +64,7 @@
     <p>
       Whole Lamb Leg $11.99 per kg
 
-    </p>
 
-    <h1>Recipes </h1>
 
 
 
@@ -84,13 +83,16 @@
       <u>u</u>
     </p>
 
-    <h2>Links</h2>
+    <h2>Recipes</h2>
     <p>
       Right here, is
       <a href="?2017-06-2703%3A30%3A17">an internal link that has not been visited</a>
       (don't click or it will become visited).
     </p>
     <p>This is a link <a href="https://tasmanbutchers.com.au/">to an external website</a>.</p>
+    <p> This is a link to recipe we reccomed <a
+        href=https://tasmanbutchers.com.au/our-recipes/butterflied-lamb-leg> yummy lamb</a>.
+    </p>
     <p>Here we have a <a href=".">visited link</a>.</p>
     <p>If we click <a href="">this thing</a>, we'll jump to the top of the page.</p>
 
