--- a/style-guide.html
+++ b/style-guide.html
@@ -21,13 +21,9 @@
     <div class="header-detail">
       Specials
 
-
-
-
-
     </div>
 
-  </div>
+
 </header>
 
 <main>
@@ -49,297 +45,315 @@
 
 
 
-        <img src="resources/images/tasman-wez.JPG" alt="butcher-shop">
+
 
 
 
       </div>
+      <section class="something">
+
+        <div class="1 thing">
+          <img src="resources/images/ribeye.jpg" alt="raw image of rib eye">
+
+        </div>
+
+        <div class="2 thing">
+          <img src="resources/images/rolledlegoflamb.jpg" alt="raw image of rolled seasoned lamb">
+        </div>
+
+        <div class=" 3thing">
+         <img src="resources/images/rawporterhouse.jpg"alt="raw porterhouse image">
+        </div>
+
+      </section>
 
 
     </div>
 
+  </div>
 
 
-    <h1>This Weeks Specials</h1>
+
+  <h1>This Weeks Specials</h1>
+  <p>
+    Whole Lamb Leg $11.99 per kg
+
+
+
+
+
+  <h2>Inline elements</h2>
+
+  <p>
+    Some of these are deprecated but still good to reference in case they pop up
+    in your website.
+  </p>
+
+  <p>
+    Normal, <abbr title="Abbreviations">abbr</abbr>, <del>del</del>,
+    <dfn>dfn</dfn>, <em>em</em>, <ins>ins</ins>, <mark>mark</mark>,
+    <s>strike through</s>, <small>small</small>, <strong>strong</strong>,
+    <sub>sub</sub>, <sup>sup</sup>,
+    <u>u</u>
+  </p>
+
+  <h2>Recipes</h2>
+  <p>
+    Right here, is
+    <a href="?2017-06-2703%3A30%3A17">an internal link that has not been visited</a>
+    (don't click or it will become visited).
+  </p>
+  <p>This is a link <a href="https://tasmanbutchers.com.au/">to our website</a>.</p>
+  <p> This is a link to recipe we reccomed <a href=https://tasmanbutchers.com.au/our-recipes/butterflied-lamb-leg>
+      yummy lamb</a>.
+  </p>
+  <p>Here we have a <a href=".">visited link</a>.</p>
+  <p>If we click <a href="">this thing</a>, we'll jump to the top of the page.</p>
+
+  <p>This paragraph contains a link to an <a href="mailto:shemphill@collarts.edu.au">email address</a>.</p>
+
+  <p>Here's a link to a <a href="tel:12345678">phoney phone number.</a></p>
+
+  <p>Does the <a href="sms:0413889846">sms protocol</a> actually work?</p>
+
+  <h2>Lists</h2>
+  <h4>Unordered list</h4>
+  <ul>
+    <li>List item with a much longer description or more content.</li>
+    <li>List item</li>
+    <li>
+      List item
+      <ul>
+        <li>Nested list item</li>
+        <li>Nested list item</li>
+        <li>Nested list item</li>
+      </ul>
+    </li>
+    <li>List item</li>
+    <li>List item</li>
+    <li>List item</li>
+  </ul>
+  <h3>Ordered list</h3>
+  <ol>
+    <li>List item with a much longer description or more content.</li>
+    <li>List item</li>
+    <li>
+      List item
+      <ol>
+        <li>Nested List Item</li>
+        <li>Nested List Item</li>
+        <li>Nested List Item</li>
+      </ol>
+    </li>
+    <li>List item</li>
+    <li>List item</li>
+    <li>List item</li>
+  </ol>
+  <h3>Mixed</h3>
+  <ul>
+    <li>List item with a much longer description or more content.</li>
+    <li>List item</li>
+    <li>
+      List item
+      <ol>
+        <li>Nested list item</li>
+        <li>Nested list item</li>
+        <li>Nested list item</li>
+      </ol>
+    </li>
+    <li>List item</li>
+    <li>List item</li>
+    <li>List item</li>
+  </ul>
+  <ol>
+    <li>List item with a much longer description or more content.</li>
+    <li>List item</li>
+    <li>
+      List item
+      <ul>
+        <li>Nested List Item</li>
+        <li>Nested List Item</li>
+        <li>
+          Nested List Item
+          <ol>
+            <li>Nested List Item</li>
+            <li>Nested List Item</li>
+            <li>
+              Nested List Item
+              <ol>
+                <li>Nested List Item</li>
+                <li>Nested List Item</li>
+                <li>
+                  Nested List Item
+                  <ul>
+                    <li>Nested list item</li>
+                    <li>Nested list item</li>
+                    <li>Nested list item</li>
+                  </ul>
+                </li>
+              </ol>
+            </li>
+          </ol>
+        </li>
+        <li>Nested List Item</li>
+        <li>Nested List Item</li>
+      </ul>
+    </li>
+    <li>List item</li>
+    <li>List item</li>
+    <li>List item</li>
+  </ol>
+  <h3>Definition list</h3>
+  <dl>
+    <dt>Definition list</dt>
+    <dd>
+      Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </dd>
+    <dt>Lorem ipsum dolor sit amet</dt>
+    <dd>
+      Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </dd>
+  </dl>
+  <h2>Details &amp; Summary</h2>
+  <details>
+    <summary>Question 1</summary>
     <p>
-      Whole Lamb Leg $11.99 per kg
-
-
-
-
-
-    <h2>Inline elements</h2>
-
-    <p>
-      Some of these are deprecated but still good to reference in case they pop up
-      in your website.
+      <strong>Pellentesque habitant morbi tristique</strong> senectus et netus
+      et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat
+      vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
+      quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris
+      placerat eleifend leo. Quisque sit amet est et sapien ullamcorper
+      pharetra. Vestibulum erat wisi, condimentum sed,
+      <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit
+      eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus
+      enim ac dui. <a href="#" onclick="return false;">Donec non enim</a> in
+      turpis pulvinar facilisis. Ut felis.
     </p>
-
-    <p>
-      Normal, <abbr title="Abbreviations">abbr</abbr>, <del>del</del>,
-      <dfn>dfn</dfn>, <em>em</em>, <ins>ins</ins>, <mark>mark</mark>,
-      <s>strike through</s>, <small>small</small>, <strong>strong</strong>,
-      <sub>sub</sub>, <sup>sup</sup>,
-      <u>u</u>
-    </p>
-
-    <h2>Recipes</h2>
-    <p>
-      Right here, is
-      <a href="?2017-06-2703%3A30%3A17">an internal link that has not been visited</a>
-      (don't click or it will become visited).
-    </p>
-    <p>This is a link <a href="https://tasmanbutchers.com.au/">to an external website</a>.</p>
-    <p> This is a link to recipe we reccomed <a
-        href=https://tasmanbutchers.com.au/our-recipes/butterflied-lamb-leg> yummy lamb</a>.
-    </p>
-    <p>Here we have a <a href=".">visited link</a>.</p>
-    <p>If we click <a href="">this thing</a>, we'll jump to the top of the page.</p>
-
-    <p>This paragraph contains a link to an <a href="mailto:shemphill@collarts.edu.au">email address</a>.</p>
-
-    <p>Here's a link to a <a href="tel:12345678">phoney phone number.</a></p>
-
-    <p>Does the <a href="sms:0413889846">sms protocol</a> actually work?</p>
-
-    <h2>Lists</h2>
-    <h4>Unordered list</h4>
-    <ul>
-      <li>List item with a much longer description or more content.</li>
-      <li>List item</li>
-      <li>
-        List item
-        <ul>
-          <li>Nested list item</li>
-          <li>Nested list item</li>
-          <li>Nested list item</li>
-        </ul>
-      </li>
-      <li>List item</li>
-      <li>List item</li>
-      <li>List item</li>
-    </ul>
-    <h3>Ordered list</h3>
-    <ol>
-      <li>List item with a much longer description or more content.</li>
-      <li>List item</li>
-      <li>
-        List item
-        <ol>
-          <li>Nested List Item</li>
-          <li>Nested List Item</li>
-          <li>Nested List Item</li>
-        </ol>
-      </li>
-      <li>List item</li>
-      <li>List item</li>
-      <li>List item</li>
-    </ol>
-    <h3>Mixed</h3>
-    <ul>
-      <li>List item with a much longer description or more content.</li>
-      <li>List item</li>
-      <li>
-        List item
-        <ol>
-          <li>Nested list item</li>
-          <li>Nested list item</li>
-          <li>Nested list item</li>
-        </ol>
-      </li>
-      <li>List item</li>
-      <li>List item</li>
-      <li>List item</li>
-    </ul>
-    <ol>
-      <li>List item with a much longer description or more content.</li>
-      <li>List item</li>
-      <li>
-        List item
-        <ul>
-          <li>Nested List Item</li>
-          <li>Nested List Item</li>
-          <li>
-            Nested List Item
-            <ol>
-              <li>Nested List Item</li>
-              <li>Nested List Item</li>
-              <li>
-                Nested List Item
-                <ol>
-                  <li>Nested List Item</li>
-                  <li>Nested List Item</li>
-                  <li>
-                    Nested List Item
-                    <ul>
-                      <li>Nested list item</li>
-                      <li>Nested list item</li>
-                      <li>Nested list item</li>
-                    </ul>
-                  </li>
-                </ol>
-              </li>
-            </ol>
-          </li>
-          <li>Nested List Item</li>
-          <li>Nested List Item</li>
-        </ul>
-      </li>
-      <li>List item</li>
-      <li>List item</li>
-      <li>List item</li>
-    </ol>
-    <h3>Definition list</h3>
-    <dl>
-      <dt>Definition list</dt>
-      <dd>
-        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </dd>
-      <dt>Lorem ipsum dolor sit amet</dt>
-      <dd>
-        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </dd>
-    </dl>
-    <h2>Details &amp; Summary</h2>
     <details>
-      <summary>Question 1</summary>
-      <p>
-        <strong>Pellentesque habitant morbi tristique</strong> senectus et netus
-        et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat
-        vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
-        quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris
-        placerat eleifend leo. Quisque sit amet est et sapien ullamcorper
-        pharetra. Vestibulum erat wisi, condimentum sed,
-        <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit
-        eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus
-        enim ac dui. <a href="#" onclick="return false;">Donec non enim</a> in
-        turpis pulvinar facilisis. Ut felis.
-      </p>
-      <details>
-        <summary>Related documents</summary>
-        <ul>
-          <li>
-            <a href="#" onclick="return false;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
-          </li>
-          <li>
-            <a href="#" onclick="return false;">Aliquam tincidunt mauris eu risus.</a>
-          </li>
-          <li>
-            <a href="#" onclick="return false;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
-          </li>
-          <li>
-            <a href="#" onclick="return false;">Aliquam tincidunt mauris eu risus.</a>
-          </li>
-        </ul>
-      </details>
+      <summary>Related documents</summary>
+      <ul>
+        <li>
+          <a href="#" onclick="return false;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+        </li>
+        <li>
+          <a href="#" onclick="return false;">Aliquam tincidunt mauris eu risus.</a>
+        </li>
+        <li>
+          <a href="#" onclick="return false;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+        </li>
+        <li>
+          <a href="#" onclick="return false;">Aliquam tincidunt mauris eu risus.</a>
+        </li>
+      </ul>
     </details>
-    <details>
-      <summary>Question 2</summary>
-      <p>
-        Duis consequat metus et eros rutrum, interdum facilisis urna interdum.
-        Etiam facilisis diam in libero varius ultricies id id est. Sed lacinia
-        pellentesque sem vel sagittis.
-      </p>
-    </details>
+  </details>
+  <details>
+    <summary>Question 2</summary>
+    <p>
+      Duis consequat metus et eros rutrum, interdum facilisis urna interdum.
+      Etiam facilisis diam in libero varius ultricies id id est. Sed lacinia
+      pellentesque sem vel sagittis.
+    </p>
+  </details>
 
-    <h2>Blockquote</h2>
-    <blockquote>
-      <p>
-        Those people who think they know everything are a great annoyance to those
-        of us who do.
-      </p>
-      <cite>Isaac Asimov</cite>
-    </blockquote>
+  <h2>Blockquote</h2>
+  <blockquote>
+    <p>
+      Those people who think they know everything are a great annoyance to those
+      of us who do.
+    </p>
+    <cite>Isaac Asimov</cite>
+  </blockquote>
 
-    <h2>Embedded Content</h2>
+  <h2>Embedded Content</h2>
 
-    <h3>Images</h3>
+  <h3>Images</h3>
 
-    <h4>Tasman Butchers oakleigh store</h4>
+  <h4>Tasman Butchers oakleigh store</h4>
 
-    <img src="resources/images/DSC_0892.JPG" alt="at least we have the alt text sorted">
+  <img src="resources/images/DSC_0892.JPG" alt="at least we have the alt text sorted">
 
-    <h4>Normal sized image</h4>
+  <h4>Normal sized image</h4>
 
-    <img src="https://placekitten.com/480/480" alt="Image alt text" />
+  <img src="https://placekitten.com/480/480" alt="Image alt text" />
 
-    <h4>Wiiiiiide image</h4>
+  <h4>Wiiiiiide image</h4>
 
-    <img src="https://placekitten.com/2000/600" alt="Image alt text" />
+  <img src="https://placekitten.com/2000/600" alt="Image alt text" />
 
-    <h2 class="">Embedded iFrames</h2>
+  <h2 class="">Embedded iFrames</h2>
 
-    <h3>Google map iframe</h3>
+  <h3>Google map iframe</h3>
 
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.2977690755806!2d144.98747991573606!3d-37.80649377975363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6430ac6065bff%3A0x9c5bae73367aadf4!2sCollarts%20-%20Cromwell%20St%20Campus!5e0!3m2!1sen!2sau!4v1582194038555!5m2!1sen!2sau"
-      width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.2977690755806!2d144.98747991573606!3d-37.80649377975363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6430ac6065bff%3A0x9c5bae73367aadf4!2sCollarts%20-%20Cromwell%20St%20Campus!5e0!3m2!1sen!2sau!4v1582194038555!5m2!1sen!2sau"
+    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
-    <h3>YouTube iframe</h3>
-
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/WFkIKd6md6g?start=206" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-    <h2>Media</h2>
-
-    <h3>Audio</h3>
-
-    <p>This won't work until we reference an audio file.</p>
-
-    <audio src="" controls>
-      Your browser does not support the audio element.
-    </audio>
+  <h3>YouTube iframe</h3>
 
 
-    <h3>Video (no controls - for background)</h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/WFkIKd6md6g?start=206" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <p>Here is a video i took while cooking up some gyros.</p>
+  <h2>Media</h2>
 
-    <video src="resources/video/DSC_1103.MOV" alt="flames buring" buring; muted autoplay loop>
-    </video>
+  <h3>Audio</h3>
 
-    <h3>Video with controls</h3>
+  <p>This won't work until we reference an audio file.</p>
+
+  <audio src="" controls>
+    Your browser does not support the audio element.
+  </audio>
+
+
+  <h3>Video (no controls - for background)</h3>
+
+  <p>Here is a video i took while cooking up some gyros.</p>
+
+  <video src="resources/video/DSC_1103.MOV" alt="flames buring" buring; muted autoplay loop>
+  </video>
+
+  <h3>Video with controls</h3>
 
 
 
-    <h2>Some headings in context</h2>
+  <h2>Some headings in context</h2>
 
-    <h1>My Favourite Places in Europe</h1>
+  <h1>My Favourite Places in Europe</h1>
 
-    <p>Europe is a big place!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <p>Europe is a big place!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h2>France</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2>France</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h3>Paris</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Paris</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h3>Marseille</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Marseille</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h2>Italy</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2>Italy</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h3>Rome</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Rome</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h3>Venice</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Venice</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h2>Spain</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2>Spain</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h3>Madrid</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Madrid</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-    <h3>Barcelona</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Barcelona</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
 
 
