added more photos

--- a/style-guide.html
+++ b/style-guide.html
@@ -18,11 +18,15 @@
   <div class="layout-wide">
     <img src='resources/images/Tasman-Logo-big@2x.png' alt=" tasman butchers logo">
 
-    <div class="header-detail">
+    <div class="header-detail" alt="specials">
       Specials
 
-    </div>
+      <div class="header-detail" alt="about us">
+        About Us
 
+        <div class="header-detail" alt="recipes">
+          Recipes
+        </div>
 
 </header>
 
@@ -41,11 +45,8 @@
 
 
 
+
       <div class="logo">
-
-
-
-
 
 
 
@@ -62,7 +63,7 @@
         </div>
 
         <div class=" 3thing">
-         <img src="resources/images/rawporterhouse.jpg"alt="raw porterhouse image">
+          <img src="resources/images/rawporterhouse.jpg" alt="raw porterhouse image">
         </div>
 
       </section>
@@ -75,11 +76,33 @@
 
 
   <h1>This Weeks Specials</h1>
+
+  <section class="something">
+
+    <div class="meat 1">
+      <img src="resources/images/meat1.jpg" alt="raw image of porterhouse">
+
+    </div>
+
+
+    <div class="meat 2 ">
+      <img src="resources/images/meat2.jpg" alt="raw image of porterhouse x 2">
+    </div>
+
+    <div class=" meat 3">
+      <img src="resources/images/meat3.jpg" alt="raw image beef spare ribs">
+    </div>
+
+  </section>
   <p>
-    Whole Lamb Leg $11.99 per kg
+    Porterhouse steak $24.99 per kg
+    Porterhouse steak $24.99 per kg
+    Beef spare ribs $24.99 per kg
 
 
+    </div>
 
+    </div>
 
 
   <h2>Inline elements</h2>
