added more buttons

--- a/style-guide.html
+++ b/style-guide.html
@@ -18,14 +18,15 @@
   <div class="layout-wide">
     <img src='resources/images/Tasman-Logo-big@2x.png' alt=" tasman butchers logo">
 
-    <div class="header-detail" alt="specials">
-      Specials
+    <div class="header-detail" alt="specials"> 
+      <a href="https://tasmanbutchers.com.au/catalogue">Specials </a></p>
 
       <div class="header-detail" alt="about us">
-        About Us
+        <a href="https://tasmanbutchers.com.au/about-us">About us </a></p>
+
 
         <div class="header-detail" alt="recipes">
-          Recipes
+          <a href="https://tasmanbutchers.com.au/our-recipes"> Recipes </a></p>
         </div>
 
 </header>
@@ -43,14 +44,11 @@
       <h2> The Meat Specialists</h2>
 
 
+      <div class="logo"> </div>
 
 
 
-      <div class="logo">
 
-
-
-      </div>
       <section class="something">
 
         <div class="1 thing">
@@ -73,7 +71,13 @@
 
   </div>
 
+  <h1>
+    Something
+  </h1>
 
+  <p>
+    this is some information that you need to know
+  </p>
 
   <h1>This Weeks Specials</h1>
 
@@ -139,93 +143,7 @@
 
   <p>Does the <a href="sms:0413889846">sms protocol</a> actually work?</p>
 
-  <h2>Lists</h2>
-  <h4>Unordered list</h4>
-  <ul>
-    <li>List item with a much longer description or more content.</li>
-    <li>List item</li>
-    <li>
-      List item
-      <ul>
-        <li>Nested list item</li>
-        <li>Nested list item</li>
-        <li>Nested list item</li>
-      </ul>
-    </li>
-    <li>List item</li>
-    <li>List item</li>
-    <li>List item</li>
-  </ul>
-  <h3>Ordered list</h3>
-  <ol>
-    <li>List item with a much longer description or more content.</li>
-    <li>List item</li>
-    <li>
-      List item
-      <ol>
-        <li>Nested List Item</li>
-        <li>Nested List Item</li>
-        <li>Nested List Item</li>
-      </ol>
-    </li>
-    <li>List item</li>
-    <li>List item</li>
-    <li>List item</li>
-  </ol>
-  <h3>Mixed</h3>
-  <ul>
-    <li>List item with a much longer description or more content.</li>
-    <li>List item</li>
-    <li>
-      List item
-      <ol>
-        <li>Nested list item</li>
-        <li>Nested list item</li>
-        <li>Nested list item</li>
-      </ol>
-    </li>
-    <li>List item</li>
-    <li>List item</li>
-    <li>List item</li>
-  </ul>
-  <ol>
-    <li>List item with a much longer description or more content.</li>
-    <li>List item</li>
-    <li>
-      List item
-      <ul>
-        <li>Nested List Item</li>
-        <li>Nested List Item</li>
-        <li>
-          Nested List Item
-          <ol>
-            <li>Nested List Item</li>
-            <li>Nested List Item</li>
-            <li>
-              Nested List Item
-              <ol>
-                <li>Nested List Item</li>
-                <li>Nested List Item</li>
-                <li>
-                  Nested List Item
-                  <ul>
-                    <li>Nested list item</li>
-                    <li>Nested list item</li>
-                    <li>Nested list item</li>
-                  </ul>
-                </li>
-              </ol>
-            </li>
-          </ol>
-        </li>
-        <li>Nested List Item</li>
-        <li>Nested List Item</li>
-      </ul>
-    </li>
-    <li>List item</li>
-    <li>List item</li>
-    <li>List item</li>
-  </ol>
+
   <h3>Definition list</h3>
   <dl>
     <dt>Definition list</dt>
