tried to align txt with images
im sure there is a better way they arent centered properly

--- a/style-guide.html
+++ b/style-guide.html
@@ -69,6 +69,8 @@
 
     </div>
 
+  
+
   </div>
 
   <h1>
@@ -99,10 +101,8 @@
 
   </section>
   <p>
-    Porterhouse steak $24.99 per kg
-    Porterhouse steak $24.99 per kg
-    Beef spare ribs $24.99 per kg
-
+    <pre class="tab"> Porterhouse steak $24.99 per kg                Porterhouse steak $24.99 per kg                    Beef spare ribs $24.99 per kg
+    </pre>
 
     </div>
 
