omg i think i fixed the header

--- a/style-guide.html
+++ b/style-guide.html
@@ -18,16 +18,12 @@
   <div class="layout-wide">
     <img src='resources/images/Tasman-Logo-big@2x.png' alt=" tasman butchers logo">
 
-    <div class="header-detail" alt="specials"> 
-      <a href="https://tasmanbutchers.com.au/catalogue">Specials </a></p>
+    <div class="header-detail1" alt="specials">
+      <a href="https://tasmanbutchers.com.au/catalogue">Specials </a>
+      <a href="https://tasmanbutchers.com.au/about-us">About us </a>
+      <a href="https://tasmanbutchers.com.au/our-recipes"> Recipes </a>
 
-      <div class="header-detail" alt="about us">
-        <a href="https://tasmanbutchers.com.au/about-us">About us </a></p>
 
-
-        <div class="header-detail" alt="recipes">
-          <a href="https://tasmanbutchers.com.au/our-recipes"> Recipes </a></p>
-        </div>
 
 </header>
 
@@ -69,7 +65,7 @@
 
     </div>
 
-  
+
 
   </div>
 
@@ -101,12 +97,12 @@
 
   </section>
   <p>
-    <pre class="tab"> Porterhouse steak $24.99 per kg                Porterhouse steak $24.99 per kg                    Beef spare ribs $24.99 per kg
+  <pre class="tab"> Porterhouse steak $24.99 per kg                Porterhouse steak $24.99 per kg                    Beef spare ribs $24.99 per kg
     </pre>
 
-    </div>
+  </div>
 
-    </div>
+  </div>
 
 
   <h2>Inline elements</h2>
